draft-ietf-marf-not-spam-feedback-02

--- a/draft-ietf-marf-not-spam-feedback-02.html
+++ b/draft-ietf-marf-not-spam-feedback-02.html
@@ -353,7 +353,6 @@
   <link href="#rfc.toc" rel="Contents">
 <link href="#rfc.section.1" rel="Chapter" title="1 Introduction">
 <link href="#rfc.section.1.1" rel="Chapter" title="1.1 Discussion">
-<link href="#rfc.section.1.2" rel="Chapter" title="1.2 Terminology">
 <link href="#rfc.section.2" rel="Chapter" title="2 Feedback Report Type: Not-Spam">
 <link href="#rfc.section.3" rel="Chapter" title="3 Example">
 <link href="#rfc.section.4" rel="Chapter" title="4 Security Considerations">
@@ -396,8 +395,8 @@
 <td class="right">Huawei Technologies</td>
 </tr>
 <tr>
-<td class="left">Expires: February 13, 2012</td>
-<td class="right">August 12, 2011</td>
+<td class="left">Expires: March 22, 2012</td>
+<td class="right">September 19, 2011</td>
 </tr>
 
     	
@@ -405,7 +404,7 @@
   </table>
 
   <p class="title">Email Feedback Report Type Value : not-spam <br />
-  <span class="filename">draft-ietf-marf-not-spam-feedback-01</span></p>
+  <span class="filename">draft-ietf-marf-not-spam-feedback-02</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>This document defines a new Abuse Reporting Format (ARF) feedback report type value: "not-spam".  It can be used to report a message that was mistakenly marked as spam.  </p>
@@ -413,7 +412,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet- Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on February 13, 2012.</p>
+<p>This Internet-Draft will expire on March 22, 2012.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2011 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -426,8 +425,6 @@
   	<li>1.   <a href="#rfc.section.1">Introduction</a>
 </li>
 <li>1.1.   <a href="#rfc.section.1.1">Discussion</a>
-</li>
-<li>1.2.   <a href="#rfc.section.1.2">Terminology</a>
 </li>
 <li>2.   <a href="#rfc.section.2">Feedback Report Type: Not-Spam</a>
 </li>
@@ -469,18 +466,14 @@
 <p id="rfc.section.1.1.p.2">For example, in response to a "not-spam" report the email system can remove the spam tag or otherwise reclassify the message, possibly preventing future similar email for this user from being marked as spam.  The report can be used to adjust the training of an automated classifier.  After processing the report, the email operator might send a notification to the email client about the processing result (for example, by moving the message from one mailbox to another, such as from "Junk" to "Inbox").  </p>
 <p id="rfc.section.1.1.p.3">In most cases, "not-spam" reports will probably not be taken on their own, but will be considered along with other information, analysis of the message, etc.  Because different users have different needs and different views of what constitutes spam, reports from one user might or might not be applicable to others.  And because users might sometimes press a "report not spam" button accidentally, immediate strong action, such as marking all similar messages as "good" based on a single report, is probably not the right approach.  Recipients of "not-spam" reports need to consider what's right in their environments.  </p>
 <p id="rfc.section.1.1.p.4">There are anti-spam systems that use "not spam" feedback today.  All of them take the reports and mix them with other spam reports and other data, using their own algorithms, to determine appropriate action.  In no case do the existing systems use a "not spam" report as an immediate, automatic override.  </p>
-<h1 id="rfc.section.1.2">
-<a href="#rfc.section.1.2">1.2.</a> <a href="#terms" id="terms">Terminology</a>
-</h1>
-<p id="rfc.section.1.2.p.1">The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this document are to be interpreted as described in <a href="#RFC2119">[RFC2119]</a>.  These terms take their normative values only when presented in UPPER CASE.  </p>
 <h1 id="rfc.section.2">
 <a href="#rfc.section.2">2.</a> Feedback Report Type: Not-Spam</h1>
 <p id="rfc.section.2.p.1">This document only defines a new feedback report type, "not-spam", extending the Email Feedback Reports specification <a href="#RFC5965">[RFC5965]</a>.  </p>
-<p id="rfc.section.2.p.2">In the first MIME part of the feedback report message, the end user or the email client MAY add information to indicate why the message is not spam -- for example, because the originator or its domain is well known.  </p>
+<p id="rfc.section.2.p.2">In the first MIME part of the feedback report message, the end user or the email client can add information to indicate why the message is not spam -- for example, because the originator or its domain is well known.  </p>
 <h1 id="rfc.section.3">
 <a href="#rfc.section.3">3.</a> <a href="#Example" id="Example">Example</a>
 </h1>
-<p id="rfc.section.3.p.1">In the example, Joe, a pharmaceuticals sales representative, has received a message about discount pharmaceuticals.  Because that is a frequent subject of spam email, the message has been marked as spam -- incorrectly, in this case.  Joe has reported it as "not-spam", and this is an example of the report.  </p>
+<p id="rfc.section.3.p.1">In the example, Joe, a pharmaceuticals sales representative, has received a message about discount pharmaceuticals.  Because that is a frequent subject of spam email, the message has been marked as spam -- incorrectly, in this case.  Joe has reported it as "not-spam", and this is an example of the report, shortened (the "[...etc...]" part) for presentation here.  </p>
 <p id="rfc.section.3.p.2">Note that the message is DKIM-signed <a href="#I-D.ietf-dkim-rfc4871bis">[I-D.ietf-dkim-rfc4871bis]</a>, a good security practice as suggested in RFC 5965 section 8.2 <a href="#RFC5965">[RFC5965]</a>.  </p>
 <div id="#rfc.figure.1"></div>
 <pre>      
@@ -507,7 +500,7 @@
    This is an email abuse report for an email message received
    from IP 192.0.2.1 on Thu, 8 Mar 2005 14:00:00 EDT.
    For more information about this format please see
-   http://www.mipassoc.org/arf/.
+   http://tools.ietf.org/html/rfc5965
    Comment: I sell pharmaceuticals, so this is not spam for me.
 
    --part1_13d.2e68ed54_boundary
@@ -545,8 +538,8 @@
 <h1 id="rfc.section.4">
 <a href="#rfc.section.4">4.</a> <a href="#security" id="security">Security Considerations</a>
 </h1>
-<p id="rfc.section.4.p.1">All of the Security Considerations from the Email Feedback Reports specification <a href="#RFC5965">[RFC5965]</a> are inherited here.  </p>
-<p id="rfc.section.4.p.2">Not-spam reports could possibly be used in an attack on a filtering system, reporting true spam as "not-spam".  Even in absence of malice, some not-spam reports might be made in error, or will only apply to the user sending the report.  Operators need to be careful in trusting such reports, beyond their applicability to the specific user in question.  </p>
+<p id="rfc.section.4.p.1">All of the Security Considerations from the Email Feedback Reports specification <a href="#RFC5965">[RFC5965]</a> are inherited here.  In addition, the Email Feedback Reports Applicability Statement <a href="#I-D.ietf-marf-as">[I-D.ietf-marf-as]</a> contains important information about trust relationships and other security- and integrity-related aspects of accepting abuse feedback.  </p>
+<p id="rfc.section.4.p.2">In particular, not-spam reports will likely be used in an attack on a filtering system, reporting true spam as "not-spam".  Even in absence of malice, some not-spam reports might be made in error, or will only apply to the user sending the report.  Operators need to be careful in trusting such reports, beyond their applicability to the specific user in question.  </p>
 <h1 id="rfc.section.5">
 <a href="#rfc.section.5">5.</a> <a href="#IANA" id="IANA">IANA Considerations</a>
 </h1>
@@ -573,18 +566,11 @@
 <a href="#rfc.references">7.</a> References</h1>
 <h1 id="rfc.references.1">
 <a href="#rfc.references.1">7.1.</a> Normative References</h1>
-<table><tbody>
-<tr>
-<td class="reference"><b id="RFC2119">[RFC2119]</b></td>
-<td class="top">
-<a href="mailto:sob@harvard.edu" title="Harvard University">Bradner, S.</a>, "<a href="http://tools.ietf.org/html/rfc2119">Key words for use in RFCs to Indicate Requirement Levels</a>", BCP 14, RFC 2119, March 1997.</td>
-</tr>
-<tr>
+<table><tbody><tr>
 <td class="reference"><b id="RFC5965">[RFC5965]</b></td>
 <td class="top">
 <a>Shafranovich, Y.</a>, <a>Levine, J.</a> and <a>M. Kucherawy</a>, "<a href="http://tools.ietf.org/html/rfc5965">An Extensible Format for Email Feedback Reports</a>", RFC 5965, August 2010.</td>
-</tr>
-</tbody></table>
+</tr></tbody></table>
 <h1 id="rfc.references.2">
 <a href="#rfc.references.2">7.2.</a> Informative References</h1>
 <table><tbody>
@@ -597,6 +583,11 @@
 <td class="reference"><b id="I-D.ietf-dkim-rfc4871bis">[I-D.ietf-dkim-rfc4871bis]</b></td>
 <td class="top">
 <a>Crocker, D</a>, <a>Hansen, T</a> and <a>M Kucherawy</a>, "<a href="http://tools.ietf.org/html/draft-ietf-dkim-rfc4871bis-15">DomainKeys Identified Mail (DKIM) Signatures</a>", Internet-Draft draft-ietf-dkim-rfc4871bis-15, July 2011.</td>
+</tr>
+<tr>
+<td class="reference"><b id="I-D.ietf-marf-as">[I-D.ietf-marf-as]</b></td>
+<td class="top">
+<a>Falk, J</a>, "<a href="http://tools.ietf.org/html/draft-ietf-marf-as-00">Creation and Use of Email Feedback Reports: An Applicability Statement for the Abuse Reporting Format (ARF)</a>", Internet-Draft draft-ietf-marf-as-00, September 2011.</td>
 </tr>
 </tbody></table>
 <h1 id="rfc.authors"><a href="#rfc.authors">Authors' Addresses</a></h1>
