draft-chroboczek-babel-routing-protocol-05

--- a/draft-chroboczek-babel-routing-protocol-05.html
+++ b/draft-chroboczek-babel-routing-protocol-05.html
@@ -152,15 +152,16 @@
 <table summary="layout" width="66%" border="0" cellpadding="0" cellspacing="0"><tr><td><table summary="layout" width="100%" border="0" cellpadding="2" cellspacing="1">
 <tr><td class="header">Network Working Group</td><td class="header">J. Chroboczek</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">PPS, University of Paris 7</td></tr>
-<tr><td class="header">Intended status: Experimental</td><td class="header">July 25, 2010</td></tr>
-<tr><td class="header">Expires: January 26, 2011</td><td class="header">&nbsp;</td></tr>
+<tr><td class="header">Intended status: Experimental</td><td class="header">October 25, 2010</td></tr>
+<tr><td class="header">Expires: April 28, 2011</td><td class="header">&nbsp;</td></tr>
 </table></td></tr></table>
-<h1><br />The Babel Routing Protocol<br />draft-chroboczek-babel-routing-protocol-04</h1>
+<h1><br />The Babel Routing Protocol<br />draft-chroboczek-babel-routing-protocol-05</h1>
 
 <h3>Abstract</h3>
 
-<p>Babel is a loop-free distance vector routing protocol that is robust and
-efficient both in ordinary wired networks and in wireless mesh networks.
+<p>Babel is a mostly loop-free distance vector routing protocol that is
+robust and efficient both in ordinary wired networks and in wireless
+mesh networks.
 </p>
 <h3>Status of this Memo</h3>
 <p>
@@ -177,7 +178,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on January 26, 2011.</p>
+This Internet-Draft will expire on April 28, 2011.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -297,13 +298,14 @@ Features</h3>
 
 <p>The main property that makes Babel suitable for unstable networks is
 that, unlike naive distance-vector routing protocols <a class='info' href='#RIP'>[RIP]<span> (</span><span class='info'>Malkin, G., &ldquo;RIP Version 2,&rdquo; November&nbsp;1998.</span><span>)</span></a>,
-it does not cause routing pathologies such as routing loops and black-holes
-during reconvergence.  Even after a mobility event is detected, a Babel
-network usually remains loop-free.  Babel then quickly reconverges to
-a configuration that preserves the loop-freedom and connectedness of the
-network, but is not necessarily optimal; in many cases, this operation
-requires no packet exchanges at all.  Babel then slowly converges, in
-a time on the scale of minutes, to an optimal configuration.
+it strongly limits the frequency and duration of routing pathologies
+such as routing loops and black-holes during reconvergence.  Even after
+a mobility event is detected, a Babel network usually remains loop-free.
+Babel then quickly reconverges to a configuration that preserves the
+loop-freedom and connectedness of the network, but is not necessarily
+optimal; in many cases, this operation requires no packet exchanges at
+all.  Babel then slowly converges, in a time on the scale of minutes, to
+an optimal configuration.
 </p>
 <p>More precisely, Babel has the following properties:
 </p>
@@ -313,12 +315,13 @@ a time on the scale of minutes, to an optimal configuration.
 </li>
 <li>when a prefix is originated by multiple routers, Babel may occasionally
   create a transient routing loop for this particular prefix; this loop
-  disappears in a time proportional to its diameter, and never again (up to
-  an arbitrary garbage-collection time) will the routers involved
+  disappears in a time proportional to its diameter, and never again (up
+  to an arbitrary garbage-collection time) will the routers involved
   participate in a routing loop for the same prefix;
 </li>
-<li>any routing black-holes that may appear after a mobility event are
-  corrected in a time at most proportional to the network's diameter.
+<li>assuming reasonable packet loss rates, any routing black-holes that
+  may appear after a mobility event are corrected in a time at most
+  proportional to the network's diameter.
 </li>
 </ul><p>
 
@@ -346,12 +349,11 @@ protocol the Babel packets are themselves being carried over.
 Limitations</h3>
 
 <p>Babel has two limitations that make it unsuitable for use in some
-environments.  First, Babel relies on periodic routing table updates rather
-than using a reliable transport; hence, in large, stable networks it
-generates more traffic than protocols that only send updates when the
+environments.  First, Babel relies on periodic routing table updates
+rather than using a reliable transport; hence, in large, stable networks
+it generates more traffic than protocols that only send updates when the
 network topology changes.  In such networks, protocols such as OSPF
-<a class='info' href='#OSPF'>[OSPF]<span> (</span><span class='info'>Moy, J., &ldquo;OSPF Version 2,&rdquo; April&nbsp;1998.</span><span>)</span></a> or EIGRP <a class='info' href='#EIGRP'>[EIGRP]<span> (</span><span class='info'>Albrightson, B., Garcia Luna Aceves, J., and J. Boyle, &ldquo;EIGRP -- a Fast Routing Protocol Based on Distance Vectors,&rdquo; 1994.</span><span>)</span></a> might be more
-suitable.
+<a class='info' href='#OSPF'>[OSPF]<span> (</span><span class='info'>Moy, J., &ldquo;OSPF Version 2,&rdquo; April&nbsp;1998.</span><span>)</span></a>, IS-IS <a class='info' href='#IS-IS'>[IS&#8209;IS]<span> (</span><span class='info'>, &ldquo;Information technology &mdash; Telecommunications and     information exchange between systems &mdash; Intermediate System to     Intermediate System intra-domain routeing information exchange protocol     for use in conjunction with the protocol for providing the     connectionless-mode network service (ISO 8473),&rdquo; .</span><span>)</span></a> or EIGRP <a class='info' href='#EIGRP'>[EIGRP]<span> (</span><span class='info'>Albrightson, B., Garcia Luna Aceves, J., and J. Boyle, &ldquo;EIGRP -- a Fast Routing Protocol Based on Distance Vectors,&rdquo; 1994.</span><span>)</span></a> might be more suitable.
 </p>
 <p>Second, Babel does impose a hold time when a prefix is retracted
 (<a class='info' href='#hold-time'>Section&nbsp;3.5.5<span> (</span><span class='info'>Hold Time</span><span>)</span></a>).  While this hold time does not apply to the
@@ -375,11 +377,10 @@ document are to be interpreted as described in <a class='info' href='#RFC2119'>[
 <a name="rfc.section.2"></a><h3>2.&nbsp;
 Conceptual Description of the Protocol</h3>
 
-<p>Babel is a loop-free distance vector protocol: it is based on the
-Bellman-Ford protocol, just like the venerable RIP <a class='info' href='#RIP'>[RIP]<span> (</span><span class='info'>Malkin, G., &ldquo;RIP Version 2,&rdquo; November&nbsp;1998.</span><span>)</span></a>,
-but includes a number of refinements that either prevent loop formation
-altogether, or ensure that a loop disappears in a timely manner and doesn't
-form again.
+<p>Babel is a mostly loop-free distance vector protocol: it is based on
+the Bellman-Ford protocol, just like the venerable RIP <a class='info' href='#RIP'>[RIP]<span> (</span><span class='info'>Malkin, G., &ldquo;RIP Version 2,&rdquo; November&nbsp;1998.</span><span>)</span></a>, but includes a number of refinements that either prevent
+loop formation altogether, or ensure that a loop disappears in a timely
+manner and doesn't form again.
 </p>
 <p>Conceptually, Bellman-Ford is executed in parallel for every source of
 routing information (destination of data traffic).  In the following
@@ -494,7 +495,7 @@ possibly cause a routing loop.
 the feasibility condition, that guarantees the absence of routing loops
 whenever all routers ignore route updates that do not satisfy the
 feasibility condition.  In effect, this makes Bellman-Ford into a family of
-routing algorithms, parametrised by the feasibility condition.
+routing algorithms, parameterised by the feasibility condition.
 </p>
 <p>Many different feasibility conditions are possible.  For example, the
 BGP protocol can be modelled as being a distance-vector protocol with
@@ -639,6 +640,11 @@ S  |1
 
 at which point the route through B becomes feasible again.
 </p>
+<p>Note that while sequence numbers are used for determining
+feasibility, they are not necessarily used in route selection: a node
+will normally ignore the sequence number when selecting a route
+(<a class='info' href='#route-selection'>Section&nbsp;3.6<span> (</span><span class='info'>Route Selection</span><span>)</span></a>).
+</p>
 <a name="anchor11"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.2.6"></a><h3>2.6.&nbsp;
@@ -655,6 +661,14 @@ request to the source for a new sequence number.  This request is forwarded
 hop by hop to the source, with no regard to the feasibility condition.
 Upon receiving the request, the source increases its sequence number, and
 broadcasts an update, which is forwarded to the requesting node.
+</p>
+<p>Note that after a change in network topology not all such requests
+will, in general, reach the source, as some will be sent over links
+which are now broken.  However, if the network is still connected, then
+at least one among the nodes suffering from spurious starvation has an
+(unfeasible) route to the source; hence, in the absence of packet loss,
+at least one such request will reach the source.  (Packet loss is
+compensated for by resending requests a small number of times.)
 </p>
 <p>Since requests are forwarded with no regard to the feasibility
 condition, they may, in general, be caught in a forwarding loop; this is
@@ -803,6 +817,10 @@ updates sent for routes originated by this node.  A node increments its
 sequence number (modulo 2^16) whenever it receives a request for a new
 sequence number (<a class='info' href='#handling-seqno-requests'>Section&nbsp;3.8.1.2<span> (</span><span class='info'>Seqno Requests</span><span>)</span></a>).
 </p>
+<p>A node SHOULD NOT increment its seqno number spontaneously, since
+increasing seqnos makes it less likely that other nodes will have
+feasible alternate routes when their selected routes fail.
+</p>
 <a name="anchor17"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.3.2.2"></a><h3>3.2.2.&nbsp;
@@ -920,15 +938,16 @@ expiry timer.  It is initialised and reset as specified in
 The Table of Pending Requests</h3>
 
 <p>The table of pending requests contains a list of seqno requests that
-the local node has sent (either because they have been originated locally,
-or because they were forwarded) and to which no reply has been received
-yet.  This table is indexed by triples of the form (neigh, seqno,
-  neighbour), and every pending request contains the following data:
+the local node has sent (either because they have been originated
+locally, or because they were forwarded) and to which no reply has been
+received yet.  This table is indexed by prefixes, and every entry in
+this table contains the following data:
 </p>
 <ul class="text">
-<li>the router-id and seqno being requested;
+<li>the prefix, router-id and seqno being requested;
 </li>
-<li>the neighbour, if any, for which we are forwarding this request.
+<li>the neighbour, if any, on behalf of which we are forwarding this
+request;
 </li>
 <li>a small integer indicating the number of times that this request will be
 resent if it remains unsatisfied.
@@ -1069,7 +1088,7 @@ concerned, only the following conditions MUST be satisfied:
 <p>Note that while this document does not constrain cost computation any
 further, not all cost computation strategies will give good results.  We
 give a few examples of strategies for computing a link's cost that are known
-to work well in practice in in <a class='info' href='#cost-computation-examples'>Appendix&nbsp;A.2<span> (</span><span class='info'>Cost Computation</span><span>)</span></a>.
+to work well in practice in <a class='info' href='#cost-computation-examples'>Appendix&nbsp;A.2<span> (</span><span class='info'>Cost Computation</span><span>)</span></a>.
 </p>
 <a name="anchor26"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -1187,7 +1206,7 @@ locally optimal routing table, but might not reach a global optimum (in
 fact, such a global optimum may not even exist).
 </p>
 <p>As with cost computation, not all strategies for computing route metrics
-will gove good results.  In particular, some metrics are more likely than
+will give good results.  In particular, some metrics are more likely than
 others to lead to routing instabilities (route flapping).  We give a number
 of examples of strictly monotonic, isotonic routing metrics that are known
 to work well in practice in <a class='info' href='#metric-computation-examples'>Appendix&nbsp;A.3<span> (</span><span class='info'>Metric computation</span><span>)</span></a>.
@@ -1404,7 +1423,8 @@ prefix changes in a significant manner, either due to a received update or
 because a link cost has changed.  A node SHOULD NOT send triggered updates
 for other reasons, such as when there is a minor fluctuation in a route's
 metric, when the selected next hop changes, or to propagate a new sequence
-number (except to satisfy a request, as specified in <a class='info' href='#requests'>Section&nbsp;3.8<span> (</span><span class='info'>Explicit Route Requests</span><span>)</span></a>).
+number (except to satisfy a request, as specified in
+<a class='info' href='#requests'>Section&nbsp;3.8<span> (</span><span class='info'>Explicit Route Requests</span><span>)</span></a>).
 </p>
 <a name="maintaining-fd"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -1447,9 +1467,6 @@ node SHOULD use an optimisation known as split horizon.  When split horizon
 is used on a given interface, a routing update is not sent on this
 particular interface when the advertised route was learnt from a neighbour
 over the same interface.
-</p>
-<p>Since Babel does not suffer from routing loops, split horizon with
-poison reverse SHOULD NOT be used.
 </p>
 <p>Split horizon SHOULD NOT be applied to an interface unless the interface
 is known to be symmetric and transitive; in particular, split horizon is
@@ -1574,9 +1591,11 @@ will result in a route being advertised with a new sequence number.  (Note
 that due to duplicate suppression only a small number of such requests will
 actually reach the source.)
 </p>
-<p>In order to compensate for packet loss, a node SHOULD repeat such a
-request a small number of times if no route becomes feasible within a short
-time.
+<p>In order to compensate for packet loss, a node SHOULD repeat such
+a request a small number of times if no route becomes feasible within
+a short time.  Under heavy packet loss, however, all such requests may
+be lost; in that case, the second mechanism in the next section will
+eventually ensure that a new seqno is received.
 </p>
 <a name="request-unfeasible"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -2407,6 +2426,12 @@ References</h3>
 <td class="author-text">Albrightson, B., Garcia Luna Aceves, J., and J. Boyle, &ldquo;EIGRP -- a Fast Routing Protocol Based on Distance Vectors,&rdquo; Proc. Interop&nbsp;94, 1994.</td></tr>
 <tr><td class="author-text" valign="top"><a name="ETX">[ETX]</a></td>
 <td class="author-text">De Couto, D., Aguayo, D., Bicket, J., and R. Morris, &ldquo;A high-throughput path metric for multi-hop wireless networks,&rdquo; Proc. MobiCom&nbsp;2003, 2003.</td></tr>
+<tr><td class="author-text" valign="top"><a name="IS-IS">[IS-IS]</a></td>
+<td class="author-text">&ldquo;Information technology &mdash; Telecommunications and
+    information exchange between systems &mdash; Intermediate System to
+    Intermediate System intra-domain routeing information exchange protocol
+    for use in conjunction with the protocol for providing the
+    connectionless-mode network service (ISO 8473),&rdquo; ISO/IEC&nbsp;10589:2002.</td></tr>
 <tr><td class="author-text" valign="top"><a name="JITTER">[JITTER]</a></td>
 <td class="author-text">Floyd, S. and V. Jacobson, &ldquo;The synchronization of periodic routing messages,&rdquo; IEEE/ACM Trans. Netw.&nbsp;2, 2, 122-136, April&nbsp;1994.</td></tr>
 <tr><td class="author-text" valign="top"><a name="OSPF">[OSPF]</a></td>
