draft-ietf-mediactrl-mixer-control-package-14

--- a/draft-ietf-mediactrl-mixer-control-package-14.html
+++ b/draft-ietf-mediactrl-mixer-control-package-14.html
@@ -155,13 +155,13 @@
 <tr><td class="header">Network Working Group</td><td class="header">S. McGlashan</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">Hewlett-Packard</td></tr>
 <tr><td class="header">Intended status: Standards Track</td><td class="header">T. Melanchuk</td></tr>
-<tr><td class="header">Expires: July 8, 2011</td><td class="header">Rain Willow Communications</td></tr>
+<tr><td class="header">Expires: July 10, 2011</td><td class="header">Rain Willow Communications</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">C. Boulton</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">NS-Technologies</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">January 4, 2011</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">January 6, 2011</td></tr>
 </table></td></tr></table>
 <h1><br />A Mixer Control Package
-		for the Media Control Channel Framework<br />draft-ietf-mediactrl-mixer-control-package-13</h1>
+		for the Media Control Channel Framework<br />draft-ietf-mediactrl-mixer-control-package-14</h1>
 
 <h3>Abstract</h3>
 
@@ -188,7 +188,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on July 8, 2011.</p>
+This Internet-Draft will expire on July 10, 2011.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -3728,8 +3728,8 @@ Language Identifier</h3>
 <p>A language identifier labels information content as being
           of a particular human language variant. Following the XML
           specification for language identification <a class='info' href='#XML'>[XML]<span> (</span><span class='info'>Bray, T., Paoli, J., Sperberg-McQueen, C M., Maler, E., and F. Yergeau, &ldquo;Extensible Markup Language (XML) 1.0 (Third Edition),&rdquo; February&nbsp;2004.</span><span>)</span></a>, a legal language identifier is identified by a
-          RFC5646 (<a class='info' href='#RFC5646'>[RFC5646]<span> (</span><span class='info'>Phillips, A. and M. Davis, &ldquo;Tags for Identifying Languages,&rdquo; September&nbsp;2009.</span><span>)</span></a>) and RFC4647 (<a class='info' href='#RFC4647'>[RFC4647]<span> (</span><span class='info'>Phillips, A. and M. Davis, &ldquo;Matching of Language Tags,&rdquo; September&nbsp;2006.</span><span>)</span></a>) code where the language code is required
-          and a country code or other subtag identifier is optional.
+          RFC5646 code (<a class='info' href='#RFC5646'>[RFC5646]<span> (</span><span class='info'>Phillips, A. and M. Davis, &ldquo;Tags for Identifying Languages,&rdquo; September&nbsp;2009.</span><span>)</span></a>) and matched according
+          to RFC4647 (<a class='info' href='#RFC4647'>[RFC4647]<span> (</span><span class='info'>Phillips, A. and M. Davis, &ldquo;Matching of Language Tags,&rdquo; September&nbsp;2006.</span><span>)</span></a>).
           
 </p>
 <a name="schema"></a><br /><hr />
@@ -5235,6 +5235,20 @@ MIME Media Type Registration for
 Change Summary</h3>
 
 <p>Note to RFC Editor:  Please remove this whole section.
+</p>
+<p> The following are the changes between the -14 and -13 versions
+(addressing remaining IESG DISCUSS):
+
+</p>
+<ul class="text">
+<li>4.7.7 Language Identifier: deleted statement "where the language
+code is required and a country code or other subtag identifier is
+optional" and clarified that RFC 4647 specifies the matching procedure.
+
+</li>
+</ul><p>
+
+
 </p>
 <p> The following are the changes between the -13 and -12 versions
 (addressing remaining IESG DISCUSS):
