draft-allbery-afs-srv-records-05

--- a/draft-allbery-afs-srv-records-05.html
+++ b/draft-allbery-afs-srv-records-05.html
@@ -153,20 +153,21 @@
 <table summary="layout" width="66%" border="0" cellpadding="0" cellspacing="0"><tr><td><table summary="layout" width="100%" border="0" cellpadding="2" cellspacing="1">
 <tr><td class="header">Network Working Group</td><td class="header">R. Allbery</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">Stanford University</td></tr>
-<tr><td class="header">Updates: <a href='http://tools.ietf.org/html/rfc1183'>1183</a> (if&nbsp;approved)</td><td class="header">February 12, 2010</td></tr>
+<tr><td class="header">Updates: <a href='http://tools.ietf.org/html/rfc1183'>1183</a> (if&nbsp;approved)</td><td class="header">February 25, 2010</td></tr>
 <tr><td class="header">Intended status: Standards Track</td><td class="header">&nbsp;</td></tr>
-<tr><td class="header">Expires: August 16, 2010</td><td class="header">&nbsp;</td></tr>
+<tr><td class="header">Expires: August 29, 2010</td><td class="header">&nbsp;</td></tr>
 </table></td></tr></table>
-<h1><br />DNS SRV Resource Records for AFS<br />draft-allbery-afs-srv-records-04</h1>
+<h1><br />DNS SRV Resource Records for AFS<br />draft-allbery-afs-srv-records-05</h1>
 
 <h3>Abstract</h3>
 
 <p>This document specifies how to use DNS (Domain Name Service) SRV
       RRs (Resource Records) to locate services for the AFS distributed
-      file system and how the priority and weight values of the SRV RR
-      should be interpreted in the server ranking system used by AFS.  It
-      deprecates use of the AFSDB RR to locate AFS cell database servers
-      and provides guidance for backward compatibility.
+      file system and how the priority and weight values of the SRV
+      RR should be interpreted in the server ranking system used by
+      AFS.  It updates RFC 1183 to deprecate use of the AFSDB RR to
+      locate AFS cell database servers and provides guidance for backward
+      compatibility.
 </p>
 <h3>Internet Draft Comments</h3>
 
@@ -195,7 +196,7 @@ The list of current Internet-Drafts can be accessed at
 The list of Internet-Draft Shadow Directories can be accessed at
 <a href='http://www.ietf.org/shadow.html'>http://www.ietf.org/shadow.html</a>.</p>
 <p>
-This Internet-Draft will expire on August 16, 2010.</p>
+This Internet-Draft will expire on August 29, 2010.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -402,12 +403,11 @@ DNS SRV RRs for AFS</h3>
 </p>
 <p>If there are multiple targets with an equal priority, the weight
       value of the DNS SRV RR SHOULD be used as input to a weighted
-      algorithm for selecting servers.  This server ordering MAY be done
-      either per call or for the lifetime of the DNS SRV RR information.
-      As specified by <a class='info' href='#RFC2782'>[RFC2782]<span> (</span><span class='info'>Gulbrandsen, A., Vixie, P., and L. Esibov, &ldquo;A DNS RR for specifying the location of services (DNS SRV),&rdquo; February&nbsp;2000.</span><span>)</span></a>, larger weights SHOULD be
-      given a proportionately higher probability of being selected.  In
-      the presence of records containing weights greater than 0, records
-      with weight 0 should have a very small chance of being selected.  A
+      algorithm for selecting servers.  As specified by
+      <a class='info' href='#RFC2782'>[RFC2782]<span> (</span><span class='info'>Gulbrandsen, A., Vixie, P., and L. Esibov, &ldquo;A DNS RR for specifying the location of services (DNS SRV),&rdquo; February&nbsp;2000.</span><span>)</span></a>, larger weights SHOULD be given a
+      proportionately higher probability of being selected.  In the
+      presence of records containing weights greater than 0, records with
+      weight 0 should have a very small chance of being selected.  A
       weight of 0 SHOULD be used if all targets with that priority are
       weighted equally.  AFS clients MAY take into account network
       performance and other protocol metrics along with SRV RR weights
@@ -423,6 +423,14 @@ DNS SRV RRs for AFS</h3>
       AFS as to any other DNS RR.  Any information derived from the DNS
       SRV RRs, such as preference ranks, MUST be discarded when the DNS
       SRV RR is expired.
+</p>
+<p>Implementations are not required to re-run the weighted server
+      selection algorithm for each call.  They MAY instead reuse the
+      results of the algorithm until the DNS SRV RRs expire.  Clients
+      could therefore use a specific server for the lifetime of the DNS
+      SRV records, which may affect the load distribution properties
+      that DNS SRV records provide.  Server operators should account for
+      this effect when setting the TTL of those records.
 </p>
 <p>AFS clients MAY remember which targets are inaccessible by that
       client and ignore those targets when determining which server to
@@ -530,8 +538,8 @@ Use of AFSDB RRs</h3>
       provide VLDB and PTS services via UDP on the standard ports.  (This
       falls shy of MUST NOT because it may be useful in some unusual
       circumstances to advertise via an AFSDB RR a server that provides
-      only one of the two services, but be aware that configuration may
-      confuse legacy clients.)
+      only one of the two services, but be aware that such a configuration
+      may confuse legacy clients.)
 </p>
 <p>An AFS cell SHOULD have at least one VLDB and at least one PTS
       server providing service on the standard ports of 7003 and 7002,
@@ -566,9 +574,9 @@ Example</h3>
         fictional example.com domain with AFS services.
 </p><div style='display: table; width: 0; margin-left: 3em; margin-right: auto'><pre>
     $ORIGIN example.com.
-    @                    SOA   server.example.com. root.example.com.
-                                ( 2009100201 3600 3600 604800 86400 )
-                         NS    server.example.com.
+    @                    SOA   dns.example.com. root.example.com. (
+                                 2009100201 3600 3600 604800 86400 )
+                         NS    dns.example.com.
     _afs3-vlserver._udp  SRV   0 2 7003 afsdb1.example.com.
     _afs3-vlserver._udp  SRV   0 4 7003 afsdb2.example.com.
     _afs3-vlserver._udp  SRV   1 0 65500 afsdb3.example.com.
@@ -581,6 +589,7 @@ Example</h3>
 
     @                    AFSDB 1 afsdb1.example.com.
 
+    dns                  A     192.0.2.9
     afsdb1               A     192.0.2.10
     afsdb2               A     192.0.2.11
     afsdb3               A     192.0.2.12
@@ -598,7 +607,7 @@ Example</h3>
 </p>
 <p>afsdb3 provides a hypothetical TCP version of AFS VLDB and PTS
       service on the standard ports and is the only server providing these
-      services over TCP for this cell.  Such a TCP-based AFS protocol does
+      services over TCP for this cell.  Such a TCP-based AFS protocol did
       not exist at the time this document was written.  This example only
       shows what the record would look like in a hypothetical future if
       such a protocol were developed.
@@ -676,7 +685,7 @@ References</h3>
 <table width="99%" border="0">
 <tr><td class="author-text" valign="top"><a name="AFS1">[AFS1]</a></td>
 <td class="author-text">Howard, J., Kazar, M., Menees, S., Nichols, D., Satyanarayanan, M., Sidebotham, R., and M. West, &ldquo;Scale and Performance in a Distributed File
-            System,&rdquo; February&nbsp;1988.</td></tr>
+            System,&rdquo; ACM Trans. on Computer Systems&nbsp;6(1), February&nbsp;1988.</td></tr>
 <tr><td class="author-text" valign="top"><a name="AFS2">[AFS2]</a></td>
 <td class="author-text">Howard, J., &ldquo;An Overview of the Andrew File System,&rdquo; CMU-ITC&nbsp;88-062, February&nbsp;1988.</td></tr>
 <tr><td class="author-text" valign="top"><a name="ARLA">[ARLA]</a></td>
